added contact form

--- a/templates/institute.html
+++ b/templates/institute.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>AeduZ</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
@@ -20,23 +20,25 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="{% static 'assets/img/navbar-logo.svg' %} " alt="..." /></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ms-1"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Book 1:1 Call</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Why Eduwayy?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+          <div class="container">
+              <a class="navbar-brand" href="/"><img src="{% static 'aeduz_logo1.png' %} " style="width:200px;height:57px;" alt="..." /></a>
+              {% comment %} <a class="navbar-brand" href="#page-top"><img src="{% static 'aeduz_logo1.png' %} " alt="..." /></a> {% endcomment %}
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                  Menu
+                  <i class="fas fa-bars ms-1"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                      <li class="nav-item"><a class="nav-link" href="#services">About Us</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#portfolio">Book 1:1 Call</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#about">Why Eduwayy?</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/institutes">Institutions </a></li>
+                      <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
         <!-- Masthead-->
         <header class="masthea">
             <!-- <div class="container">
