worked on institues html

--- a/templates/institute.html
+++ b/templates/institute.html
@@ -29,130 +29,149 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                      <li class="nav-item"><a class="nav-link" href="#services">About Us</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#portfolio">Book 1:1 Call</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#about">Why Eduwayy?</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/#services">About Us</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/#portfolio">Book 1:1 Call</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/#about">Why Eduwayy?</a></li>
                       <li class="nav-item"><a class="nav-link" href="/institutes">Institutions </a></li>
-                      <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/#team">Team</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/#contact">Contact Us</a></li>
                   </ul>
               </div>
           </div>
       </nav>
-        <!-- Masthead-->
-        <header class="masthea">
-            <!-- <div class="container">
-                <div class="masthead-heading ">
-                    THROUGH AeduZ !
-                </div>
-                <div class="masthead-subheading">
-                    
-                    Guiding DREAMS Unlocking POTENTIAL
-                </div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Book 1:1 Call</a>
-            </div> -->
-        </header>
+        <br><br><br><br><br>
 
-
-        <div class="container  z-depth-1">
-
-
-          <!--Section: Content-->
-          <section class="dark-grey-text">
-        
-            <div class="row pr-lg-5">
-              <div class="col-md-7 mb-4">
-        
-                <div class="view">
-                  <img src="https://mdbootstrap.com/img/illustrations/graphics(4).png" class="img-fluid" alt="smaple image">
-                </div>
-        
-              </div>
-              <div class="col-md-5 d-flex align-items-center">
-                <div>
-                  
-                  <h3 class="font-weight-bold mb-4">Material Design Blocks</h3>
-        
-                  <p>Lorem ipsum dolor sit amet consectetur adip elit. Maiores deleniti explicabo voluptatem quisquam nulla asperiores aspernatur aperiam voluptate et consectetur minima delectus, fugiat eum soluta blanditiis adipisci, velit dolore magnam.</p>
-        
-                  <button type="button" class="btn btn-orange btn-rounded mx-0">Download</button>
-        
-                </div>
-              </div>
-            </div>
-        
-          </section>
-          <!--Section: Content-->
-        
-        
-        </div>
-        <div class="album py-5 bg-body-tertiary">
+        <section class="fdb-block">
           <div class="container">
-      
-            <div class="row ">
-              <div class="col-md-4">
-                <div class="card shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                  <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                      </div>
-                      <small class="text-body-secondary">9 mins</small>
-                    </div>
-                  </div>
-                </div>
+            <div class="row align-items-center">
+              <div class="col-12 col-md-12 col-lg-6 col-xl-5">
+                <p style="font-size: 22px;">Welcome</p>
+                
+                <h1 style="color: rgb(35 127 83);">Institutions</h1>
+                <p style="font-size: 22px;">Partner with</p>
+                
+                <h1 style="color: rgb(35 127 83);">Aeduz </h1>
+                <p style="font-size: 22px;">
+                  for Academic
+                  Excellence</p>
+                <!-- <p class="lead mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
+        
+                
               </div>
-              <div class="col-md-4">
-                <div class="card shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                  <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                      </div>
-                      <small class="text-body-secondary">9 mins</small>
-                    </div>
-                  </div>
-                </div>
+              <div class="col-12 col-md-8 m-auto ml-lg-auto mr-lg-0 col-lg-6 pt-5 pt-lg-0">
+                <img alt="image" class="img-fluid" src="{% static 'insti.png'%}">
               </div>
-              <div class="col-md-4">
-                <div class="card shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                  <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                      </div>
-                      <small class="text-body-secondary">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-             
             </div>
           </div>
-        </div>
+        </section>
+      
+
+        
+
+          <!-- Section -->
+          <section>
+            
+            <h3 class="font-weight-bold text-center dark-grey-text pb-2">Let's Grow Together Get all these Partner Benefits </h3>
+            <hr class="w-header my-4">
+            <!-- <p class="lead text-center text-muted pt-2 pb-3 mb-5">We are so proud of our product. It's really easy to create a landing page for your product.</p> -->
+            <div class="container">
+
+              <div class="row dark-grey-text">
+                
+                <div class="col-md-6 col-xl-4 mb-4">
+                <div class="media">
+                  <div class="mr-4">
+                    <span class="text-primary"><i class="icon-fa fas fa-file-alt fa-2x"></i></span>
+                  </div>
+                  <div class="media-body">
+                    <h6 class="font-weight-bold">Comprehensive Support</h6>
+                    <p class="text-muted">We address academic and personal challenges, ensuring students receive holistic assistance.</p>
+                  </div>
+                </div>
+              </div>
+        
+              <div class="col-md-6 col-xl-4 mb-4">
+                <div class="media">
+                  <div class="mr-4">
+                    <span class="text-danger"><i class="icon-fa fas fa-bullhorn fa-2x"></i></span>
+                  </div>
+                  <div class="media-body">
+                    <h6 class="font-weight-bold">Tailored Guidance
+                    </h6>
+                    <p class="text-muted">
+                      Personalized mentorship guides students towards exam success with strategies tailored to their needs .
+                      
+                    </p>
+                  </div>
+                </div>
+              </div>
+        
+              <div class="col-md-6 col-xl-4 mb-4">
+                <div class="media">
+                  <div class="mr-4">
+                    <span class="text-info"><i class="icon-fa fas fa-code fa-2x"></i></span>
+                  </div>
+                  <div class="media-body">
+                    <h6 class="font-weight-bold">Healthy Study Habits</h6>
+                    <p class="text-muted">
+                      We promote habits that ensure long-term success, emphasizing effective study techniques and stress management.
+                    </p>
+                  </div>
+                </div>
+              </div>
+        
+              <div class="col-md-6 col-xl-4 mb-4">
+                <div class="media">
+                  <div class="mr-4">
+                    <span class="text-warning"><i class="icon-fa fas fa-comments fa-2x"></i></span>
+                  </div>
+                  <div class="media-body">
+                    <h6 class="font-weight-bold">Flexible Experience</h6>
+                    <p class="text-muted">Hassle-free integration into your curriculum, with our platform providing easy communication and scheduling options.</p>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col-md-6 col-xl-4 mb-4">
+                <div class="media">
+                  <div class="mr-4">
+                    <span class="text-muted"><i class="icon-fa fas fa-cogs fa-2x"></i></span>
+                  </div>
+                  <div class="media-body">
+                    <h6 class="font-weight-bold">Positive Impace</h6>
+                    <p class="text-muted">Improve student performance and well-being through our personalized support and mentorship</p>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col-md-6 col-xl-4 mb-4">
+                <div class="media">
+                  <div class="mr-4">
+                    <span class="text-success"><i class="icon-fa far fa-handshake fa-2x"></i></span>
+                  </div>
+                  <div class="media-body">
+                    <h6 class="font-weight-bold">Step Six</h6>
+                    <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa doloremque laudantium.</p>
+                  </div>
+                </div>
+              </div>
+        
+            </div>
+          </div>
+        
+          </section>
+          <!-- Section -->
+          
+      
+     
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Institute Register</h2>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- * * SB Forms Contact Form * *-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- This form is pre-integrated with SB Forms.-->
-                <!-- To make this form functional, sign up at-->
-                <!-- https://startbootstrap.com/solution/contact-forms-->
-                <!-- to get an API token!-->
+                
                 <form id="contactForm" method="post" action="submitted">{%csrf_token%}
                     <div class="row  mb-5">
                         <div class="col-md-6">
@@ -214,95 +233,8 @@
                 </form>
             </div>
         </section>
-        <div class="container z-depth-1 my-5 p-5">
 
-          <!-- Section -->
-          <section>
-            
-            <h3 class="font-weight-bold text-center dark-grey-text pb-2">A Few Easy Steps</h3>
-            <hr class="w-header my-4">
-            <p class="lead text-center text-muted pt-2 pb-3 mb-5">We are so proud of our product. It's really easy to create a landing page for your product.</p>
-        
-            <div class="row dark-grey-text">
-        
-              <div class="col-md-6 col-xl-4 mb-4">
-                <div class="media">
-                  <div class="mr-4">
-                    <span class="text-primary"><i class="icon-fa fas fa-file-alt fa-2x"></i></span>
-                  </div>
-                  <div class="media-body">
-                    <h6 class="font-weight-bold">Step One</h6>
-                    <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa doloremque laudantium.</p>
-                  </div>
-                </div>
-              </div>
-        
-              <div class="col-md-6 col-xl-4 mb-4">
-                <div class="media">
-                  <div class="mr-4">
-                    <span class="text-danger"><i class="icon-fa fas fa-bullhorn fa-2x"></i></span>
-                  </div>
-                  <div class="media-body">
-                    <h6 class="font-weight-bold">Step Two</h6>
-                    <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa doloremque laudantium.</p>
-                  </div>
-                </div>
-              </div>
-        
-              <div class="col-md-6 col-xl-4 mb-4">
-                <div class="media">
-                  <div class="mr-4">
-                    <span class="text-info"><i class="icon-fa fas fa-code fa-2x"></i></span>
-                  </div>
-                  <div class="media-body">
-                    <h6 class="font-weight-bold">Step Three</h6>
-                    <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa doloremque laudantium.</p>
-                  </div>
-                </div>
-              </div>
-        
-              <div class="col-md-6 col-xl-4 mb-4">
-                <div class="media">
-                  <div class="mr-4">
-                    <span class="text-warning"><i class="icon-fa fas fa-comments fa-2x"></i></span>
-                  </div>
-                  <div class="media-body">
-                    <h6 class="font-weight-bold">Step Four</h6>
-                    <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa doloremque laudantium.</p>
-                  </div>
-                </div>
-              </div>
-        
-              <div class="col-md-6 col-xl-4 mb-4">
-                <div class="media">
-                  <div class="mr-4">
-                    <span class="text-muted"><i class="icon-fa fas fa-cogs fa-2x"></i></span>
-                  </div>
-                  <div class="media-body">
-                    <h6 class="font-weight-bold">Step Five</h6>
-                    <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa doloremque laudantium.</p>
-                  </div>
-                </div>
-              </div>
-        
-              <div class="col-md-6 col-xl-4 mb-4">
-                <div class="media">
-                  <div class="mr-4">
-                    <span class="text-success"><i class="icon-fa far fa-handshake fa-2x"></i></span>
-                  </div>
-                  <div class="media-body">
-                    <h6 class="font-weight-bold">Step Six</h6>
-                    <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa doloremque laudantium.</p>
-                  </div>
-                </div>
-              </div>
-        
-            </div>
-        
-          </section>
-          <!-- Section -->
-          
-        </div>
+       
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
