--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
 {% load static %}
+{% load socialaccount %}
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -62,6 +63,7 @@
             </div>
         </header>
        
+        <a class="btn btn-lg" style="background-color: #355681; font-weight: 600; color: rgb(236, 229, 229); margin-top:10px;" href="/accounts/google/login/">Google login</a><br>
         <!-- Who we are-->
         <section class="page-section" id="about">
             <div class="container">
