--- a/templates/index.html
+++ b/templates/index.html
@@ -32,11 +32,20 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Book 1:1 Call</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Why Eduwayy?</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Book 1:1 Call</a></li> -->
+                        <!-- <li class="nav-item"><a class="nav-link" href="#about">Why Eduwayy?</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="/institutes">Institutions </a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
+                        {% if user.is_authenticated %}
+    <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
+{% else %}
+    <li class="nav-item"><a class="nav-link" href="/accounts/google/login/">Dashboard</a></li>
+{% endif %}
+
+<!-- <a href="{% provider_login_url 'google'%}?next=/new">Login with Google</a> -->
+
+                        <!-- <li class="nav-item"><a class="nav-link" href="/accounts/google/login/">Dashboard</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -63,7 +72,6 @@
             </div>
         </header>
        
-        <a class="btn btn-lg" style="background-color: #355681; font-weight: 600; color: rgb(236, 229, 229); margin-top:10px;" href="/accounts/google/login/">Google login</a><br>
         <!-- Who we are-->
         <section class="page-section" id="about">
             <div class="container">
