--- a/templates/institute.html
+++ b/templates/institute.html
@@ -16,12 +16,22 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css'%}" rel="stylesheet" />
+
+
+        <!-- Fevicon Files -->
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+        <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
+        <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
           <div class="container">
-              <a class="navbar-brand" href="/"><img src="{% static 'aeduz_logo1.png' %} " style="width:200px;height:57px;" alt="..." /></a>
+            <a class="navbar-brand" href="/"><img src="{% static 'aeduz_transparent.png' %} " style="width:120px;height:90px;" alt="..." /></a>
               {% comment %} <a class="navbar-brand" href="#page-top"><img src="{% static 'aeduz_logo1.png' %} " alt="..." /></a> {% endcomment %}
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   Menu
